# LightLog

./: .gitignore  CMakeLists.txt  README.md  benchmark.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: pip.yml  wheel.yml
src/: cpplightlog.cpp
src/lightlog/: __init__.py  decorator.py  levelsvalue.py  pylightlog.py
